--- a/products.html
+++ b/products.html
@@ -4,6 +4,7 @@
         <title>Products</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./products.css">
+        <link rel="stylesheet" href="./navbar.css">
     </head>
     <body>
 
