--- a/team.html
+++ b/team.html
@@ -4,19 +4,23 @@
         <title>The Team</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="./navbar.css">
     </head>
     <body>
         <header>
             <div class="nav-bar-container">
                 <ul class="nav-bar">
-                    <li><a href="./index.html">Home</a></li>
-                    <!-- <li><a href="">About</a></li> -->
-                    <li><a href="./products.html">Products</a></li>
-                    <li><a href="">The Team</a></li>
-                    <!-- <li><a href="">Contact</a></li>  -->
+                    <li class="nav-bar-title">The Team</li>
+                    <li class="tab"><a href="./index.html">Home</a></li>
+                    <li class="tab"><a href="./products.html">Products</a></li>
+                    <li class="tab"><a href="">The Team</a></li>
                 </ul>
             </div>
         </header>
+
+        <div class="homepage-content">
+            <img class="homepage-main-img" src="https://media.endclothing.com/end-features/prodfeatures/2e1ace88-67ba-42f5-87e7-8ebfa0a92826_DD1391-100+_launches_hero_landscape_1.jpg?auto=compress,format">
+        </div>
 
         
     </body>
