--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Homepage</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="./navbar.css">
         <script type="text/javascript" src="js/products.js"></script>
     </head>
     <body>
@@ -11,7 +12,7 @@
         <header>
             <div class="nav-bar-container">
                 <ul class="nav-bar">
-                    <li class="nav-bar-title">TITLE</li>
+                    <li class="nav-bar-title">Shoes & Shit</li>
                     <li class="tab"><a href="./index.html">Home</a></li>
                     <li class="tab"><a href="./products.html">Products</a></li>
                     <li class="tab"><a href="./team.html">The Team</a></li>
