--- a/team.html
+++ b/team.html
@@ -5,6 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./style.css">
         <link rel="stylesheet" href="./navbar.css">
+
+        <script type="text/javaScript">
+            document.write ("JavaScript output\n");
+        </script>
     </head>
     <body>
         <header>
@@ -19,7 +23,7 @@
         </header>
 
         <div class="homepage-content">
-            <img class="homepage-main-img" src="https://media.endclothing.com/end-features/prodfeatures/2e1ace88-67ba-42f5-87e7-8ebfa0a92826_DD1391-100+_launches_hero_landscape_1.jpg?auto=compress,format">
+            <!-- <img class="homepage-main-img" src="https://media.endclothing.com/end-features/prodfeatures/2e1ace88-67ba-42f5-87e7-8ebfa0a92826_DD1391-100+_launches_hero_landscape_1.jpg?auto=compress,format"> -->
         </div>
 
         
