add all shoe photos, get blue dunks to work

--- a/products.html
+++ b/products.html
@@ -23,13 +23,14 @@
         </header>
 
         <div class="products-container">  
+            <!-- DUNK LOW (UNIVERSITY BLUE) -->
             <div id="p1" class="product" onclick="handleProductSelect(this.id)">
                 <!-- <img src="./images/p1/university_blue_dunks.jpg" class="product-img" style="padding-top: 15%; padding-bottom: 5%;"> -->
                 <div class="product-imgs">
-                    <img src="https://media.endclothing.com/media/f_auto,q_auto:eco/prodmedia/media/catalog/product/1/8/18-06-2021_LL_DD1391-102_2_1.jpg" class="product-img">
-                    <img src="https://media.endclothing.com/media/f_auto,q_auto:eco/prodmedia/media/catalog/product/1/8/18-06-2021_LL_DD1391-102_3_1.jpg" class="additional-product-img">
-                    <img src="https://media.endclothing.com/media/f_auto,q_auto:eco/prodmedia/media/catalog/product/1/8/18-06-2021_LL_DD1391-102_1_1.jpg" class="additional-product-img">
-                    <img src="https://media.endclothing.com/media/f_auto,q_auto:eco/prodmedia/media/catalog/product/1/8/18-06-2021_LL_DD1391-102_5_1.jpg" class="additional-product-img">
+                    <img src="./images/p1/bluedunks1.jpg" class="product-img">
+                    <img src="./images/p1/bluedunks2.jpg" class="additional-product-img">
+                    <img src="./images/p1/bluedunks3.jpg" class="additional-product-img">
+                    <img src="./images/p1/bluedunks4.jpg" class="additional-product-img">
                 </div>
                 <div class="product-description">
                     <div class="product-name">Dunk Low (University Blue)</div>
