add email client opening to form

--- a/productDesc.html
+++ b/productDesc.html
@@ -51,7 +51,7 @@
 
         <!-- product form -->
         <div class="form-container">
-            <form action id="cart-form" name="cartForm" onsubmit="formValidation()">
+            <form action="mailto:" method="POST" enctype="text/plain" id="cart-form" name="cartForm" onsubmit="formValidation()">
                 <h3>Your Cart</h3>
                 
                 <label for="product-identifier">Product Name</label>
