--- a/productDesc.html
+++ b/productDesc.html
@@ -14,7 +14,7 @@
     <header>
         <div class="nav-bar-container">
             <ul class="nav-bar">
-                <li id="navbar-title" class="nav-bar-title">TITLE</li>
+                <li id="navbar-title" class="nav-bar-title">Product Page</li>
                 <li class="tab"><a href="./index.html">Home</a></li>
                 <li class="tab"><a href="./products.html">Products</a></li>
                 <li class="tab"><a href="./team.html">The Team</a></li>
@@ -148,7 +148,6 @@
         document.getElementsByClassName("product-name")[0].innerHTML = localStorage["productDesc0"];
         
         document.getElementById("product-img0").src = localStorage["productImages0"]
-        
         document.getElementById("product-img1").src = localStorage["productImages1"];
         document.getElementById("product-img2").src = localStorage["productImages2"];
         document.getElementById("product-img3").src = localStorage["productImages3"];
