--- a/products.html
+++ b/products.html
@@ -195,7 +195,7 @@
                     <img src="./images/p11/ChuckTaylorAllStarClassic4.jpg" class="additional-product-img">
                 </div>  
                 <div class="product-description">
-                    <div class="product-name">Chucl Taylor All Star Classic (Navy)</div>
+                    <div class="product-name">Chuck Taylor All Star Classic (Navy)</div>
                     <div class="product-type">Converse</div>
                     <div class="product-price">$65</div>
                     <div class="product-review">35 reviews</div>
