--- a/productDesc.html
+++ b/productDesc.html
@@ -14,7 +14,7 @@
     <header>
         <div class="nav-bar-container">
             <ul class="nav-bar">
-                <li id="navbar-title" class="nav-bar-title">Product Page</li>
+                <li id="navbar-title" class="nav-bar-title">Item Select</li>
                 <li class="tab"><a href="./index.html">Home</a></li>
                 <li class="tab"><a href="./products.html">Products</a></li>
                 <li class="tab"><a href="./team.html">The Team</a></li>
