--- a/productDesc.html
+++ b/productDesc.html
@@ -118,7 +118,7 @@
                     <input id="email" name="email" type="text"/><br>
                     
                     <label for="phone-number">Phone Number</label><br>
-                    <input id="phone-number" name="phone-number" type="text"/><br>
+                    <input id="phone-number" name="phone_number" type="text"/><br>
                 </div>
 
                 <h3>Payment Information</h3>
@@ -130,13 +130,13 @@
                     <label for="debit">Debit</label>
 
                     <label for="card-number">Card Number</label><br>
-                    <input id="card-number" name="card-number" type="text"/><br>
+                    <input id="card-number" name="card_number" type="text"/><br>
 
                     <label for="expiration-date">Expiration Date</label><br>
-                    <input id="expiration-date" name="expiration-date" type="text"/><br>
+                    <input id="expiration-date" name="expiration_date" type="text"/><br>
 
                     <label for="security-code">Security Code</label><br>
-                    <input id="security-code" name="security-code" type="text"/><br>
+                    <input id="security-code" name="security_code" type="text"/><br>
                 </div>
 
                 <input type="submit" value="Submit My Order"></button>
