--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header>
             <div class="nav-bar-container">
                 <ul class="nav-bar">
-                    <li class="nav-bar-title">Shoes & Shit</li>
+                    <li class="nav-bar-title">StockABC</li>
                     <li class="tab"><a href="./index.html">Home</a></li>
                     <li class="tab"><a href="./products.html">Products</a></li>
                     <li class="tab"><a href="./team.html">The Team</a></li>
