--- a/team.html
+++ b/team.html
@@ -5,10 +5,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./style.css">
         <link rel="stylesheet" href="./navbar.css">
-
-        <script type="text/javaScript">
-            document.write ("JavaScript output\n");
-        </script>
     </head>
     <body>
         <header>
@@ -23,9 +19,15 @@
         </header>
 
         <div class="homepage-content">
-            <!-- <img class="homepage-main-img" src="https://media.endclothing.com/end-features/prodfeatures/2e1ace88-67ba-42f5-87e7-8ebfa0a92826_DD1391-100+_launches_hero_landscape_1.jpg?auto=compress,format"> -->
+            Welcome to StockABC, a platform that hosts the selling and buying of your favorite sneakers. 
+            Our collection of products ranges from shoes sourced directly from the retailer as well as 
+            shoes currated from our community. This site is the buying side, which means customer are able 
+            to shop for sneakers but not sell on this specific version of the platform. Our management and
+            devlopemnt team comprises of three people. You can read through our Bios below.  
         </div>
 
-        
+        <script type="text/javaScript">
+            // document.write ("JavaScript output\n");
+        </script>
     </body>
 </html>
