--- a/team.html
+++ b/team.html
@@ -3,8 +3,8 @@
     <head>
         <title>The Team</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./style.css">
         <link rel="stylesheet" href="./navbar.css">
+        <link rel="stylesheet" href="./team.css">
     </head>
     <body>
         <header>
@@ -18,16 +18,30 @@
             </div>
         </header>
 
-        <div class="homepage-content">
-            Welcome to StockABC, a platform that hosts the selling and buying of your favorite sneakers. 
-            Our collection of products ranges from shoes sourced directly from the retailer as well as 
-            shoes currated from our community. This site is the buying side, which means customer are able 
-            to shop for sneakers but not sell on this specific version of the platform. Our management and
-            devlopemnt team comprises of three people. You can read through our Bios below.  
-        </div>
+        <div class="bio-container">
+            <div>
+                Welcome to StockABC, a platform that hosts the selling and buying of your favorite sneakers. 
+                Our collection of products ranges from shoes sourced directly from the retailer as well as 
+                shoes currated from our community. This site is the buying side, which means customer are able 
+                to shop for sneakers but not sell on this specific version of the platform. Our management and
+                devlopemnt team comprises of three people. You can read through our Bios below.
+            </div>  
 
-        <script type="text/javaScript">
-            // document.write ("JavaScript output\n");
-        </script>
+
+            <div id="katieBio">
+                    <img src="./images/team/katie.jpg" class="bio-pic">
+                    <div>4th year Computer Science Major.</div>
+            </div>
+
+            <div id="huanBio">
+                <img src="./images/team/huan.jpg" class="bio-pic">
+                <div>4th year Software Engineering Major. </div>
+            </div>
+
+            <div id="andrewBio">
+                <img>
+                <div></div>
+            </div>
+        </div>
     </body>
 </html>
