completed teams page

--- a/team.html
+++ b/team.html
@@ -10,7 +10,7 @@
         <header>
             <div class="nav-bar-container">
                 <ul class="nav-bar">
-                    <li class="nav-bar-title">The Team</li>
+                    <li class="nav-bar-title">Team</li>
                     <li class="tab"><a href="./index.html">Home</a></li>
                     <li class="tab"><a href="./products.html">Products</a></li>
                     <li class="tab"><a href="">The Team</a></li>
@@ -18,29 +18,49 @@
             </div>
         </header>
 
+        <div class="website-description">
+            Welcome to StockABC, a platform that hosts the selling and buying of your favorite sneakers. 
+            Our collection of products ranges from shoes sourced directly from the retailer as well as 
+            shoes currated from our community. This site is the buying side, which means customer are able 
+            to shop for sneakers but not sell on this specific version of the platform. Our management and
+            devlopemnt team comprises of three people. You can read through our Bios below.
+        </div>
+
         <div class="bio-container">
-            <div>
-                Welcome to StockABC, a platform that hosts the selling and buying of your favorite sneakers. 
-                Our collection of products ranges from shoes sourced directly from the retailer as well as 
-                shoes currated from our community. This site is the buying side, which means customer are able 
-                to shop for sneakers but not sell on this specific version of the platform. Our management and
-                devlopemnt team comprises of three people. You can read through our Bios below.
-            </div>  
-
-
-            <div id="katieBio">
-                    <img src="./images/team/katie.jpg" class="bio-pic">
-                    <div>4th year Computer Science Major.</div>
+            <div class="individual-bio katieBio">
+                <img src="./images/team/katie.jpg" class="bio-pic">
+                <div class="bio-description">
+                    <div class="bio-major">
+                        Major: Computer Science
+                    </div>
+                    <div class="bio-year">
+                        Year: Senior
+                    </div>    
+                </div>            
             </div>
 
-            <div id="huanBio">
+            <div class="individual-bio huanBio">
                 <img src="./images/team/huan.jpg" class="bio-pic">
-                <div>4th year Software Engineering Major. </div>
+                <div class="bio-description">
+                    <div class="bio-major">
+                        Major: Software Engineering
+                    </div>
+                    <div class="bio-year">
+                        Year: Senior
+                    </div>    
+                </div>            
             </div>
 
-            <div id="andrewBio">
-                <img>
-                <div></div>
+            <div class="individual-bio andrewBio">
+                <img src="./images/team/andrew.jpg" class="bio-pic">
+                <div class="bio-description">
+                    <div class="bio-major">
+                        Major: Informatics
+                    </div>
+                    <div class="bio-year">
+                        Year: Senior
+                    </div>    
+                </div>
             </div>
         </div>
     </body>
