added footers, fixed minor things

--- a/productDesc.html
+++ b/productDesc.html
@@ -170,6 +170,9 @@
                 </div>
             </form>
         </div>
+        <footer>
+            Made with brains by: Katie Chow, Andrew Owyang, and Huan Nguyen
+        </footer>
 
     </div>
 
