--- a/products.html
+++ b/products.html
@@ -205,8 +205,8 @@
             </div>
         </div>
         
-        <!-- <footer>
+        <footer>
             Made with brains by: Katie Chow, Andrew Owyang, and Huan Nguyen
-        </footer> -->
+        </footer>
     </body>
 </html>
