--- a/team.html
+++ b/team.html
@@ -30,6 +30,9 @@
             <div class="individual-bio katieBio">
                 <img src="./images/team/katie.jpg" class="bio-pic">
                 <div class="bio-description">
+                    <div class="bio-name">
+                        Katie Chow
+                    </div>
                     <div class="bio-major">
                         Major: Computer Science
                     </div>
@@ -42,6 +45,9 @@
             <div class="individual-bio huanBio">
                 <img src="./images/team/huan.jpg" class="bio-pic">
                 <div class="bio-description">
+                    <div class="bio-name">
+                        Huan Nguyen
+                    </div>
                     <div class="bio-major">
                         Major: Software Engineering
                     </div>
@@ -54,6 +60,9 @@
             <div class="individual-bio andrewBio">
                 <img src="./images/team/andrew.jpg" class="bio-pic">
                 <div class="bio-description">
+                    <div class="bio-name">
+                        Andrew Owyang
+                    </div>
                     <div class="bio-major">
                         Major: Informatics
                     </div>
@@ -63,5 +72,8 @@
                 </div>
             </div>
         </div>
+        <footer>
+            Made with brains by: Katie Chow, Andrew Owyang, and Huan Nguyen
+        </footer>
     </body>
 </html>
